--- a/Netflix_Movies_and_Tv_Shows_Clustering.ipynb
+++ b/Netflix_Movies_and_Tv_Shows_Clustering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHbhmGKhlrY/aBjm6HBhKK",
+      "authorship_tag": "ABX9TyNJW/Je9Oy9EY0/ZUYoo1W+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### <font size='8px'><font color='#grey'>**<u>Project Summary:-<u>**"
+        "### <font size='5px'><font color='#grey'>**<u>Project Summary:-<u>**"
       ],
       "metadata": {
         "id": "yCVTe_qJ-jwx"
@@ -110,6 +110,51 @@
       "metadata": {
         "id": "7tHgY-Qe-43d"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font size='5px'><font color='grey'>**GitHub Link:-**"
+      ],
+      "metadata": {
+        "id": "OXaKhGkbm4Iu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://github.com/swapnalishamrao/Unsupervised_ML_Clustering_Project"
+      ],
+      "metadata": {
+        "id": "NSQFgvMgnMXt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## <font size='5px'><font color='deeppink'>**Problem Statement**"
+      ],
+      "metadata": {
+        "id": "4HLzIPOrnUtH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\"We need to understand what types of TV shows and movies are available on Netflix and if there has been a shift towards more TV shows than movies in recent years. We also want to group similar content together for better user recommendations.\""
+      ],
+      "metadata": {
+        "id": "D10cqN9EnpDE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "010uothonM-l"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
