Importing Library and connecting drive

--- a/Netflix_Movies_and_Tv_Shows_Clustering.ipynb
+++ b/Netflix_Movies_and_Tv_Shows_Clustering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJW/Je9Oy9EY0/ZUYoo1W+",
+      "authorship_tag": "ABX9TyOmt13BuORYbI80ICCohJXk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,13 +148,103 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# <font size='5px'><font color='cgrey'>***Let's Begin !***"
+      ],
       "metadata": {
-        "id": "010uothonM-l"
+        "id": "CdSuRZmmoLTl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " <font size='5px'><font color='green'>**Importing Library and connecting drive**"
+      ],
+      "metadata": {
+        "id": "Ch_p9NQNoXfU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import Libraries\n",
+        "# Important modules\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "#visulizaiton modules\n",
+        "import matplotlib\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import missingno as msno\n",
+        "import matplotlib.cm as cm\n",
+        "import geopandas as gpd\n",
+        "!pip install country_converter --upgrade\n",
+        "import country_converter as coco\n",
+        "import plotly.express as px\n",
+        "\n",
+        "#import string module\n",
+        "import string\n",
+        "string.punctuation\n",
+        "\n",
+        "# Importing libraries for hypothesis testing\n",
+        "from scipy.stats import uniform\n",
+        "from scipy.stats import norm\n",
+        "from scipy.stats import chi2\n",
+        "from scipy.stats import t\n",
+        "from scipy.stats import f\n",
+        "from scipy.stats import ttest_ind\n",
+        "from scipy import stats\n",
+        "\n",
+        "#nlp module\n",
+        "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+        "from wordcloud import WordCloud, STOPWORDS, ImageColorGenerator\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "from nltk.stem import WordNetLemmatizer\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.stem.snowball import SnowballStemmer\n",
+        "from nltk.tokenize import TweetTokenizer\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "\n",
+        "#import fundamental models\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.metrics import silhouette_score,silhouette_samples\n",
+        "from sklearn.cluster import KMeans\n",
+        "import scipy.cluster.hierarchy as shc\n",
+        "from sklearn.cluster import AgglomerativeClustering\n",
+        "from yellowbrick.cluster import SilhouetteVisualizer\n",
+        "\n",
+        "#import warnings\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "010uothonM-l",
+        "outputId": "f48ed25c-e6f2-4d43-ec5c-81aaf795ba5f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting country_converter\n",
+            "  Downloading country_converter-1.2-py3-none-any.whl (45 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/46.0 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━\u001b[0m \u001b[32m41.0/46.0 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.0/46.0 kB\u001b[0m \u001b[31m963.2 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pandas>=1.0 in /usr/local/lib/python3.10/dist-packages (from country_converter) (1.5.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0->country_converter) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0->country_converter) (2023.3.post1)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0->country_converter) (1.23.5)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas>=1.0->country_converter) (1.16.0)\n",
+            "Installing collected packages: country_converter\n",
+            "Successfully installed country_converter-1.2\n"
+          ]
+        }
+      ]
     }
   ]
 }
