--- a/Netflix_Movies_and_Tv_Shows_Clustering.ipynb
+++ b/Netflix_Movies_and_Tv_Shows_Clustering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKkfhMvnOwY7ZYLz9thNr2",
+      "authorship_tag": "ABX9TyMuKnfWTQUSaKpevYUm6jId",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1073,6 +1073,102 @@
           },
           "metadata": {},
           "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###  <font size='5px'><font color='baby'>**<u>Data Inispection</u>**"
+      ],
+      "metadata": {
+        "id": "N83jY8cOq0Pw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset Rows & Columns count\n",
+        "df.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GcIOJNK_q199",
+        "outputId": "78559b47-24b8-46ba-e228-d509dd6a5f6d"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(7787, 12)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset having 7787 observations and 12 columns."
+      ],
+      "metadata": {
+        "id": "FYDT01P7q3WV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font size='5px'><font color='winered'>**Dataset Information**"
+      ],
+      "metadata": {
+        "id": "a4jLBVUSq6D9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Information of dataset columns\n",
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yd4JgpXpq7go",
+        "outputId": "a50af3f3-76ca-4a8d-dac7-4e24200a1fd5"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 7787 entries, 0 to 7786\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column        Non-Null Count  Dtype \n",
+            "---  ------        --------------  ----- \n",
+            " 0   show_id       7787 non-null   object\n",
+            " 1   type          7787 non-null   object\n",
+            " 2   title         7787 non-null   object\n",
+            " 3   director      5398 non-null   object\n",
+            " 4   cast          7069 non-null   object\n",
+            " 5   country       7280 non-null   object\n",
+            " 6   date_added    7777 non-null   object\n",
+            " 7   release_year  7787 non-null   int64 \n",
+            " 8   rating        7780 non-null   object\n",
+            " 9   duration      7787 non-null   object\n",
+            " 10  listed_in     7787 non-null   object\n",
+            " 11  description   7787 non-null   object\n",
+            "dtypes: int64(1), object(11)\n",
+            "memory usage: 730.2+ KB\n"
+          ]
         }
       ]
     }
